--- a/pdfs/cv/cv.tex
+++ b/pdfs/cv/cv.tex
@@ -144,7 +144,7 @@
 %----------------------------------------------------------------------------------------
 \section{Education}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Ph.D. in Aerospace Engineering, University of Illinois at Urbana-Champaign & \hfill Jan 2021 - present \\
+Ph.D. in Aerospace Engineering, University of Illinois at Urbana-Champaign & \hfill Jan 2021 - Dec 2025 \\
 B.S. in Aerospace Engineering, University of Illinois at Urbana-Champaign & \hfill Aug 2017 - Dec 2020 \\
 \end{tabularx}
 
@@ -260,7 +260,7 @@ Teaching Assistant for AE 352: Aerospace Dynamical Systems & \hfill Aug 2021 - D
 \begin{tabularx}{\linewidth}{@{}l X@{}}
 Programming Languages  &  Python, C/C++, Fortran, MATLAB, R/RStudio \\[3.75pt]
 Software Tools         &  \LaTeX, Git                               \\[3.75pt]
-Prepackaged Tools      &  MONTE, GMAT, FreeFlyer                    \\[3.75pt]
+Prepackaged Tools      &  SPICE, MONTE, GMAT, FreeFlyer             \\[3.75pt]
 Operating Systems      &  Linux, MacOS, Windows                     \\[3.75pt]
 Languages              &  English, Gujarati, Hindi, French          \\[3.75pt]
 \end{tabularx}
