--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -14,12 +14,21 @@
     month = may,
 }
 
+@INPROCEEDINGS{2025Hera,
+    author = {\textbf{R. Makadia} and Steven R. Chesley and David Herald and Davide Farnocchia and Shantanu P. Naidu and Alexandros Siakas and Damya Souami and Paolo Tanga and Sotirios Tsavdaridis and Kleomenis Tsiganis},
+    title = "{First estimate of the heliocentric changes in the Didymos system after the DART impact}",
+    booktitle = "{April 2025 Hera Team Meeting}",
+    year = 2025,
+    month = apr,
+}
+
 @INPROCEEDINGS{2025SFM,
     author = {\textbf{R. Makadia} and Davide Farnocchia and Steven R Chesley and Siegfried Eggl},
     title = "{A novel method for computing state transition matrices using the unscented transform}",
     booktitle = "{35th AAS/AIAA Space Flight Mechanics Meeting}",
     year = 2025,
     month = jan,
+    url = {https://www.xcdsystem.com/aas/program/riGLvh6/index.cfm}
 }
 
 @INPROCEEDINGS{2024IAUGA,
