--- a/pdfs/cv/pub_journal.bib
+++ b/pdfs/cv/pub_journal.bib
@@ -26,17 +26,22 @@
 	journal   = {The Planetary Science Journal},
 	title     = {{Gauss-Radau Small-body Simulator (GRSS): An Open-Source Library for Planetary Defense}},
 	year      = {2025},
-	volume    = {Under review},
+	volume    = {In Press},
 	publisher = {The American Astronomical Society},
 }
 
 @article{Hirabayashi2025,
-	author = {Masatoshi Hirabayashi and author 2 and author 3 and author 4},
-	journal = {Nature Communications},
-	publisher = {Nature Portfolio},
-	title = "{Elliptical ejecta of asteroid Dimorphos is due to its surface curvature}",
-	year = {2025},
-	volume = {In press},
+	author={Hirabayashi, Masatoshi and Raducan, Sabina D. and Sunshine, Jessica M. and Farnham, Tony L. and Deshapriya, J. D. P. and Li, Jian-Yang and Tancredi, Gonzalo and Chesley, Steven R. and Daly, R. Terik and Ernst, Carolyn M. and Gai, Igor and Hasselmann, Pedro H. and Naidu, Shantanu P. and Nair, Hari and Palmer, Eric E. and Waller, C. Dany and Zinzi, Angelo and Agrusa, Harrison F. and Barbee, Brent W. and Syal, Megan Bruck and Collins, Gareth S. and Davison, Thomas M. and DeCoster, Mallory E. and Jutzi, Martin and Kumamoto, Kathryn M. and Moskovitz, Nicholas A. and Lyzhoft, Joshua R. and Schwartz, Stephen R. and Abell, Paul A. and Barnouin, Olivier S. and Chabot, Nancy L. and Cheng, Andrew F. and Dotto, Elisabetta and Fahnestock, Eugene G. and Michel, Patrick and Richardson, Derek C. and Rivkin, Andrew S. and Stickle, Angela M. and Thomas, Cristina A. and Beccarelli, Joel and Brucato, John R. and Dall'Ora, Massimo and Corte, Vincenzo Della and Epifani, Elena Mazzotta and Ieva, Simone and Impresario, Gabriele and Ivanovski, Stavro and Lucchetti, Alice and Modenini, Dario and Pajola, Maurizio and Palumbo, Pasquale and Pirrotta, Simone and Poggiali, Giovanni and Rossi, Alessandro and Tortora, Paolo and Tusberti, Filippo and Zannoni, Marco and Zanotti, Giovanni and Ferrari, Fabio and Glenar, David A. and Herreros, Isabel and Jacobson, Seth A. and Karatekin, {\"O}zg{\"u}r and Lazzarin, Monica and Lolachi, Ramin and Lucas, Michael P. and \textbf{R. Makadia} and Marzari, Francesco and Merrill, Colby C. and Migliorini, Alessandra and Nakano, Ryota and Orm{\"o}, Jens and S{\'a}nchez, Paul and Senel, Cem Berk and Soldini, Stefania and Stubbs, Timothy J.},
+	title={Elliptical ejecta of asteroid Dimorphos is due to its surface curvature},
+	journal={Nature Communications},
+	year={2025},
+	month={02},
+	day={14},
+	volume={16},
+	number={1},
+	pages={1602},
+	issn={2041-1723},
+	doi={10.1038/s41467-025-56010-w},
 }
 
 @article{Richardson2024,
